--- a/src/templates/registerfarmer.html
+++ b/src/templates/registerfarmer.html
@@ -1,4 +1,4 @@
-{% from "base.html" import render_aboutus, render_ourcauses, render_faq, render_contactus, render_ourteam, render_sponsors, render_subscribenews, render_takeaction, render_footer, render_js, render_form, render_navbar, render_css %}
+{% from "base.html" import render_scrolltotop, render_aboutus, render_ourcauses, render_faq, render_contactus, render_ourteam, render_sponsors, render_subscribenews, render_takeaction, render_footer, render_js, render_formfarmer, render_formseed, render_navbar, render_css, render_donatemodal %}
 <!DOCTYPE html>
 <html>
 
@@ -21,6 +21,9 @@
 
     <div class="body-wrapper  float-menu">
         {{ render_navbar(render) }}
+
+        {{ render_donatemodal(render) }}
+
 
 
         <div class="content-wrapper">
@@ -50,7 +53,7 @@
                         </div>
                         <div class="clear"></div>
                     </section>
-                    {{ render_form(render) }}
+                    {{ render_formfarmer(render) }}
 
                 </div>
                 <!-- Below Sidebar Section-->
@@ -64,7 +67,9 @@
 
     {{ render_contactus(render) }}
 
-    {{ render_takeaction(render) }}
+    {{ render_scrolltotop(render) }}
+
+    {{ render_faq(render) }}
 
     {{ render_subscribenews(render) }}
 
